--- a/PerguntaAi.Backend/appsettings.json
+++ b/PerguntaAi.Backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=perguntaai_db;Username=postgres;Password=root"
+  "DefaultConnection": "Host=perguntaai-db.postgres.database.azure.com;Database=perguntaai_db;Username=dbadmin;Password=PerguntaAi2026!;SSL Mode=Require;Trust Server Certificate=true;"
   }
 }
